// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> create list group 1`] = `
<ul
  className="fd-list"
>
  <li
    className="fd-list__group-header"
  >
    List Header
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 1
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 2
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 3
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 4
    </span>
  </li>
  <li
    className="fd-list__footer"
  >
    List Footer
  </li>
</ul>
`;

exports[`<List /> create list group 2`] = `
<ul
  className="fd-list"
>
  <li
    className="fd-list__group-header"
  >
    List Header
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 1
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 2
    </span>
  </li>
  <li
    className="fd-list__footer"
  >
    List Footer
  </li>
</ul>
`;

exports[`<List /> create list group 3`] = `
<ul
  className="fd-list fd-list--no-border"
>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 1
    </span>
  </li>
</ul>
`;

exports[`<List /> create list group 4`] = `
<ul
  className="fd-list fd-list--compact"
>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 1
    </span>
  </li>
</ul>
`;

exports[`<List /> create list group 5`] = `
<ul
  className="fd-list"
>
  <li
    className="fd-list__group-header"
  >
    List Header
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__icon sap-icon--cart"
    />
    <span
      className="fd-list__title"
    >
      List Item 1
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__icon sap-icon--wrench"
    />
    <span
      className="fd-list__title"
    >
      List Item 2
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__icon sap-icon--lightbulb"
    />
    <span
      className="fd-list__title"
    >
      List Item 3
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__icon sap-icon--history"
    />
    <span
      className="fd-list__title"
    >
      List Item 4
    </span>
  </li>
  <li
    className="fd-list__footer"
  >
    List Footer
  </li>
</ul>
`;

exports[`<List /> create list group 6`] = `
<ul
  className="fd-list"
>
  <li
    className="fd-list__group-header"
  >
    List Header
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 1
    </span>
    <span
      className="fd-list__icon sap-icon--navigation-right-arrow"
    />
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 2
    </span>
    <span
      className="fd-list__icon sap-icon--navigation-right-arrow"
    />
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 3
    </span>
    <span
      className="fd-list__icon sap-icon--navigation-right-arrow"
    />
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 4
    </span>
    <span
      className="fd-list__icon sap-icon--navigation-right-arrow"
    />
  </li>
  <li
    className="fd-list__footer"
  >
    List Footer
  </li>
</ul>
`;

exports[`<List /> create list group 7`] = `
<ul
  className="fd-list"
>
  <li
    className="fd-list__group-header"
  >
    List Header
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 1
    </span>
    <span
      className="fd-list__secondary"
    >
      Positive
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 2
    </span>
    <span
      className="fd-list__secondary"
    >
      Negative
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 3
    </span>
    <span
      className="fd-list__secondary"
    >
      Positive
    </span>
  </li>
  <li
    aria-selected={false}
    className="fd-list__item"
    onClick={[Function]}
    role="option"
    tabIndex="0"
  >
    <span
      className="fd-list__title"
    >
      List Item 4
    </span>
    <span
      className="fd-list__secondary"
    >
      Negative
    </span>
  </li>
  <li
    className="fd-list__footer"
  >
    List Footer
  </li>
</ul>
`;
